* Changelog

** Unreleased

- [[https://github.com/r0man/sablono/issues/141][#141]] Fix =^:inline= hint for elements without attributes.

** 0.7.6

- [[https://github.com/r0man/sablono/pull/135][#135]] Skip interpretation when using the =:inline= type hint.
- [[https://github.com/r0man/sablono/pull/134][#134]] Use the Tubax library to parse HTML in the tests and run them
  on Node.

** 0.7.5

- [[https://github.com/r0man/sablono/pull/132][#132]] Don’t join nil classes into classes string (#132)
- [[https://github.com/r0man/sablono/pull/131][#131]] Fix class compilation of keyword map lookup.

** 0.7.4

- [[https://github.com/r0man/sablono/pull/129][#129]] Fixed wrapped inputs with non-string values & checkboxes.

** 0.7.3

- [[https://github.com/r0man/sablono/pull/128][#128]] Update React to 15.2.1-1.
- [[https://github.com/r0man/sablono/pull/125][#125]] and [[https://github.com/r0man/sablono/pull/126][#126]] Update dependencies used for development.
- [[https://github.com/r0man/sablono/pull/127][#127]] Fixed skipped keys in controlled components on IE.
- [[https://github.com/r0man/sablono/pull/123][#123]] and [[https://github.com/r0man/sablono/pull/124][#124]] Don't wrap uncontrolled input elements.

** 0.7.2

- [[https://github.com/r0man/sablono/issues/119][#119]] Force lazy sequences to make dynamic binding work properly.

** 0.7.1

- [[https://github.com/r0man/sablono/pull/118][#118]] Add type hint support for attributes.

** 0.7.0

- [[https://github.com/r0man/sablono/pull/117][#117]] Switch to React 15.0.

** 0.6.3

- [[https://github.com/r0man/sablono/issues/115][#115]] Fix keyword compilation in attributes.

** 0.6.2

- [[https://github.com/r0man/sablono/pull/105][#105]] Don't remove/sort duplicate class names.
- [[https://github.com/r0man/sablono/issues/56][#56]] Add =attrs= macro to compile Clojure maps into JavaScript
  literals.

** 0.6.1

- [[https://github.com/r0man/sablono/pull/105][#105]] Remove duplicate class names with =distinct=, not =dedupe=.