@@ -14,7 +14,7 @@
 (defn as-str
   "Converts its arguments into a string using to-str."
   [& xs]
-  (apply str (map to-str xs)))
+  (str/join (map to-str xs)))
 
 (defn camel-case
   "Returns camel case version of the key, e.g. :http-equiv becomes :httpEquiv."
@@ -22,26 +22,27 @@
   (if (or (keyword? k)
           (string? k)
           (symbol? k))
-    (let [[first-word & words] (str/split (name k) #"-")]
+    (let [[first-word & words] (.split (name k) "-")]
       (if (or (empty? words)
               (= "aria" first-word)
               (= "data" first-word))
-        k (-> (map str/capitalize words)
-              (conj first-word)
-              str/join
-              keyword)))
+        k
+        (-> (map str/capitalize words)
+            (conj first-word)
+            str/join
+            keyword)))
     k))
 
 (defn camel-case-keys
   "Recursively transforms all map keys into camel case."
   [m]
   (if (map? m)
-    (let [ks (keys m)
-          kmap (zipmap ks (map camel-case ks))]
-      (-> (rename-keys m kmap)
-          (cond->
-              (map? (:style m))
-            (update-in [:style] camel-case-keys))))
+    (let [m (into {}
+                  (map (fn [[k v]] [(camel-case k) v]))
+                  m)]
+      (cond-> m
+        (map? (:style m))
+        (update :style camel-case-keys)))
     m))
 
 (defn element?
@@ -61,12 +62,10 @@
 (defn join-classes
   "Join the `classes` with a whitespace."
   [classes]
-  (->> (map #(cond
-               (string? %) %
-               :else (seq %))
-            classes)
-       (flatten)
-       (remove nil?)
+  (->> classes
+       (into [] (comp
+                 (mapcat (fn [x] (if (string? x) [x] (seq x))))
+                 (remove nil?)))
        (str/join " ")))
 
 (defn react-fn
