@@ -20,11 +20,11 @@
       (= expected (js->clj (i/attributes attrs)))
     {} {}
     {:className ""} {}
-    {:className "aa"} {"className" "aa"}
-    {:className "aa bb"} {"className" "aa bb"}
-    {:className ["aa bb"]} {"className" "aa bb"}
+    {:className "aa"}       {"className" "aa"}
+    {:className "aa bb"}    {"className" "aa bb"}
+    {:className ["aa bb"]}  {"className" "aa bb"}
     {:className '("aa bb")} {"className" "aa bb"}
-    {:id :XY} {"id" "XY"}))
+    {:id :XY}               {"id" "XY"}))
 
 (deftest test-interpret-shorthand-div-forms
   (is (= (interpret [:#test.klass1])
